Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-26049

Too many erros saying same....superfluous

XMLWordPrintable

    • Linux/Wayland
    • c045eb0cf9f6ade82b3249e641291696063e82f8 (qt-creator/qt-creator/master)

      As a user I find this superfluous

      https://www.google.com/search?channel=fs&client=ubuntu&q=superfluous+definition

       

      11:43:03: The program has unexpectedly finished.
      11:43:03: The process was ended forcefully.
      11:43:03: /media/qe/RAID_CAT_MD0/QT_PROGRAMS/JULY_26/WORK/CAT/mdi/mdi crashed.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kandeler Christian Kandeler
            anner Anne Ranch (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes