ProjectExplorer: Prevent redundant output on process crash

... in run controls.

Fixes: QTCREATORBUG-26049
Change-Id: I51e560fb4674e2b8ac59cb1901d269d8179213d7
Reviewed-by: hjk <hjk@qt.io>